// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render default table header cell tag 1`] = `
<th>
  Column Heading
</th>
`;

exports[`should render table header cell tag with ascending sort indicator 1`] = `
<th
  sort="asc"
>
  Column Heading
</th>
`;

exports[`should render table header cell tag with descending sort indicator 1`] = `
<th
  sort="desc"
>
  Column Heading
</th>
`;
